# MODplayer

./: .~README.md  LICENSE  build.sh  start-server.sh
docs/: note.md
server/: CMakeLists.txt
server/include/: ffmpeg_transcoder.h  hls_processor.h  media_analyzer.h  media_manager.h  routes.h  server.h
server/src/: ffmpeg_transcoder.cpp  hls_processor.cpp  main.cpp  media_analyzer.cpp  media_manager.cpp  routes.cpp  server.cpp
web/: index.html  realtime_demo.html
web/css/: style.css
web/js/: api.js  app.js  utils.js
